# pdf-scribe

./: LICENSE  Lesson_2_Memory_Mapping.md  README.md  pyproject.toml
Tutorials-Documentation/Zhu-Tutorial/: extract-text-single-page.py
Tutorials-Documentation/nathancy-paradetect/: detect-paragraph.py
Tutorials-Documentation/pytesseract/: quick-start.py
Tutorials-Documentation/section-io-extract-text/: main.py
Zhu-Tutorial/: extract-text-multi-page.py  extract-text-single-page.py
playground/bounding-boxes/: bb-1.py  bb-2.py  bb-3.py  bb-4.py
playground/box-selection/: main.py  processor.py  scroll.py  selection-interface.py
playground/image-text-extraction/: ite-1.py  ite-2.py  ite-3.py
playground/opencv/: box-selection.py  test.py
pypdf2-tutorial/: extract-text.py
tests/test-output/: Lesson_2_Memory_Mapping.txt  text_1.txt  text_10.txt  text_11.txt  text_12.txt  text_13.txt  text_14.txt  text_15.txt  text_16.txt  text_17.txt  text_18.txt  text_19.txt  text_2.txt  text_20.txt  text_21.txt  text_22.txt  text_23.txt  text_24.txt  text_25.txt  text_26.txt  text_27.txt  text_28.txt  text_29.txt  text_3.txt  text_30.txt  text_31.txt  text_32.txt  text_33.txt  text_34.txt  text_35.txt  text_4.txt  text_5.txt  text_6.txt  text_7.txt  text_8.txt  text_9.txt
